# ros_whisper

./: CMakeLists.txt  LICENSE  README.md  package.xml
docker/: Dockerfile
